Some Elements Styled (Strength Box, Button)

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </div >
 
 <!-- Main Content Starts  -->
+<h2 class="title">Password Generator</h2>
 <div class="container">
-    <h2>Password Generator</h2>
     <!-- Display Container  -->
     <div class="display">
         <p>P4$5W0rD!</p>
