--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
 
                 <div class="input-sub-wrapper">
                     <input type="checkbox" id="IncludeLowercase">
-                    <label for="InputLowercase">Include Lowercase Letters</label>
+                    <label for="IncludeLowercase">Include Lowercase Letters</label>
                 </div>
 
                 <div class="input-sub-wrapper">
                     <input type="checkbox" id="IncludeNumbers">
-                    <label for="InputNumbers">Include Numbers</label>
+                    <label for="IncludeNumbers">Include Numbers</label>
                 </div>
 
                 <div class="input-sub-wrapper">
                     <input type="checkbox" id="IncludeSymbols">
-                    <label for="InputUppercase">Include Symbols</label>
+                    <label for="IncludeSymbols">Include Symbols</label>
                 </div>
             </div>
 
