Range Number Display Added

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </svg>
         </button>
         <div class="onmouse-message">
-            <p>Click To Copy</p>
+            <p>Copy To Clipboard</p>
         </div>
         <div data-copy-message class="copy-message none">
             <h3>Copied!</h3>
@@ -54,7 +54,7 @@
     <div class="main-container">
         <div class="title-label">
             <h4>Character Length</h4>
-            <p>10</p>
+            <p data-range-number>10</p>
         </div>
         <form action="">
             <input class="RangeInput" type="range" min="1" max="25" id="InputNumberRange">
