--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body>
 
     <!-- Background Animation  -->
-    <div class="area" >
-        <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+<div class="area" >
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
 </div >
 
 <!-- Main Content Starts  -->
@@ -54,10 +54,10 @@
     <div class="main-container">
         <div class="title-label">
             <h4>Character Length</h4>
-            <p data-range-number>10</p>
+            <p data-range-number>0</p>
         </div>
         <form action="">
-            <input class="RangeInput" type="range" min="1" max="25" id="InputNumberRange">
+            <input class="RangeInput" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
 
             <div class="input-wrapper">
                 <div class="input-sub-wrapper">
