--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
             <div class="strength">
                 <p>STRENGTH</p>
                 <div class="strength-wrapper">
-                    <p class="strength-message" data-strength-message
-                    >weak</p>
+                    <p class="strength-message | opacity" data-strength-message
+                    ></p>
                     <div class="strength-pills">
-                        <div data-too-weak class="bg-green"></div>
-                        <div data-weak class="bg-green"></div>
-                        <div data-medium class="bg-green"></div>
-                        <div data-strong class="bg-green"></div>
+                        <div data-too-weak class="weak medium strong"></div>
+                        <div data-weak class="weak medium strong"></div>
+                        <div data-medium class="medium strong"></div>
+                        <div data-strong class="strong"></div>
                     </div>
                 </div>
             </div>
 
-            <button type="submit" class="btn">
+            <button data-submit-btn type="submit" class="btn">
                 GENERATE
                 <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg">
                     <path fill="#24232C" d="m5.106 12 6-6-6-6-1.265 1.265 3.841 3.84H.001v1.79h7.681l-3.841 3.84z"/>
