Almost All the Functionality Added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h4>Character Length</h4>
             <p data-range-number>0</p>
         </div>
-        <form action="">
+        <form data-form action="">
             <input class="RangeInput" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
 
             <div class="input-wrapper">
