Password Color Issue Fixed

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Display Container  -->
     <div class="display-wrapper">
         <div class="display-box">
-            <p data-password-value>P4$5W0rD!JSDKHJHiOm29qbGT</p>
+            <p data-password-value>P4$5W0rD!JSgT</p>
         </div>
         <button data-copy class="copy-btn | ripples">
             <!-- Copy Mark SVG  -->
