--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,117 +12,122 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
+
 <body>
 
     <!-- Background Animation  -->
-<div class="area" >
-    <ul class="circles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div >
-
-<!-- Main Content Starts  -->
-<h2 class="title">Password Generator</h2>
-<main>
-    <!-- Display Container  -->
-    <div class="display-wrapper">
-        <div class="display-box">
-            <p data-password-value>P4$5W0rD!JSgT</p>
-        </div>
-        <button data-copy class="copy-btn | ripples">
-            <!-- Copy Mark SVG  -->
-            <svg data-copy-mark class="opacity" width="21" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M20.341 3.091 17.909.659A2.25 2.25 0 0 0 16.319 0H8.25A2.25 2.25 0 0 0 6 2.25V4.5H2.25A2.25 2.25 0 0 0 0 6.75v15A2.25 2.25 0 0 0 2.25 24h10.5A2.25 2.25 0 0 0 15 21.75V19.5h3.75A2.25 2.25 0 0 0 21 17.25V4.682a2.25 2.25 0 0 0-.659-1.591ZM12.469 21.75H2.53a.281.281 0 0 1-.281-.281V7.03a.281.281 0 0 1 .281-.281H6v10.5a2.25 2.25 0 0 0 2.25 2.25h4.5v1.969a.282.282 0 0 1-.281.281Zm6-4.5H8.53a.281.281 0 0 1-.281-.281V2.53a.281.281 0 0 1 .281-.281H13.5v4.125c0 .621.504 1.125 1.125 1.125h4.125v9.469a.282.282 0 0 1-.281.281Zm.281-12h-3v-3h.451c.075 0 .147.03.2.082L18.667 4.6a.283.283 0 0 1 .082.199v.451Z" fill="#A4FFAF"/>
-            </svg>
-
-            <svg data-check class="revealUp | none" width="14" height="12" xmlns="http://www.w3.org/2000/svg">
-                <path stroke="#A4FFAF" stroke-width="3" fill="none" d="M1 5.607 4.393 9l8-8"/>
-            </svg>
-        </button>
-        <div class="onmouse-message">
-            <p>Copy To Clipboard</p>
-        </div>
-        <div data-copy-message class="copy-message none">
-            <h3>Copied!</h3>
-        </div>
+    <div class="area">
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
-    <!-- Main Container  -->
-    <div class="main-container">
-        <div class="title-label">
-            <h4>Character Length</h4>
-            <p data-range-number>0</p>
+
+    <!-- Main Content Starts  -->
+    <h2 class="title">Password Generator</h2>
+    <main>
+        <!-- Display Container  -->
+        <div class="display-wrapper">
+            <div class="display-box">
+                <p data-password-value>P4$5W0rD!JSgT</p>
+            </div>
+            <button data-copy class="copy-btn | ripples">
+                <!-- Copy Mark SVG  -->
+                <svg data-copy-mark class="opacity" width="21" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M20.341 3.091 17.909.659A2.25 2.25 0 0 0 16.319 0H8.25A2.25 2.25 0 0 0 6 2.25V4.5H2.25A2.25 2.25 0 0 0 0 6.75v15A2.25 2.25 0 0 0 2.25 24h10.5A2.25 2.25 0 0 0 15 21.75V19.5h3.75A2.25 2.25 0 0 0 21 17.25V4.682a2.25 2.25 0 0 0-.659-1.591ZM12.469 21.75H2.53a.281.281 0 0 1-.281-.281V7.03a.281.281 0 0 1 .281-.281H6v10.5a2.25 2.25 0 0 0 2.25 2.25h4.5v1.969a.282.282 0 0 1-.281.281Zm6-4.5H8.53a.281.281 0 0 1-.281-.281V2.53a.281.281 0 0 1 .281-.281H13.5v4.125c0 .621.504 1.125 1.125 1.125h4.125v9.469a.282.282 0 0 1-.281.281Zm.281-12h-3v-3h.451c.075 0 .147.03.2.082L18.667 4.6a.283.283 0 0 1 .082.199v.451Z"
+                        fill="#A4FFAF" />
+                </svg>
+
+                <svg data-check class="revealUp | none p-1" width="21" height="24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke="#A4FFAF" stroke-width="3" fill="none" d="M1 5.607 4.393 9l8-8" />
+                </svg>
+            </button>
+            <div class="onmouse-message">
+                <p>Copy To Clipboard</p>
+            </div>
+            <div data-copy-message class="copy-message none">
+                <h3>Copied!</h3>
+            </div>
         </div>
-        <form data-form action="">
-            <input class="RangeInput" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
-
-            <div class="input-wrapper">
-                <div class="input-sub-wrapper">
-                    <input type="checkbox" id="IncludeUppercase">
-                    <label for="IncludeUppercase">Include Uppercase Letters</label>
-                </div>
-
-                <div class="input-sub-wrapper">
-                    <input type="checkbox" id="IncludeLowercase">
-                    <label for="IncludeLowercase">Include Lowercase Letters</label>
-                </div>
-
-                <div class="input-sub-wrapper">
-                    <input type="checkbox" id="IncludeNumbers">
-                    <label for="IncludeNumbers">Include Numbers</label>
-                </div>
-
-                <div class="input-sub-wrapper">
-                    <input type="checkbox" id="IncludeSymbols">
-                    <label for="IncludeSymbols">Include Symbols</label>
-                </div>
+        <!-- Main Container  -->
+        <div class="main-container">
+            <div class="title-label">
+                <h4>Character Length</h4>
+                <p data-range-number>0</p>
             </div>
+            <form data-form action="">
+                <input class="RangeInput" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
 
-            <div data-error-message class="error">
-                <p>Please select a checkbox above</p>
-            </div>
+                <div class="input-wrapper">
+                    <div class="input-sub-wrapper">
+                        <input type="checkbox" id="IncludeUppercase">
+                        <label for="IncludeUppercase">Include Uppercase Letters</label>
+                    </div>
 
-            <div class="strength">
-                <p>STRENGTH</p>
-                <div class="strength-wrapper">
-                    <p class="strength-message | opacity" data-strength-message
-                    ></p>
-                    <div class="strength-pills">
-                        <div data-too-weak class="weak medium strong All"></div>
-                        <div data-weak class="weak medium strong All"></div>
-                        <div data-medium class="medium strong All"></div>
-                        <div data-strong class="strong All"></div>
+                    <div class="input-sub-wrapper">
+                        <input type="checkbox" id="IncludeLowercase">
+                        <label for="IncludeLowercase">Include Lowercase Letters</label>
+                    </div>
+
+                    <div class="input-sub-wrapper">
+                        <input type="checkbox" id="IncludeNumbers">
+                        <label for="IncludeNumbers">Include Numbers</label>
+                    </div>
+
+                    <div class="input-sub-wrapper">
+                        <input type="checkbox" id="IncludeSymbols">
+                        <label for="IncludeSymbols">Include Symbols</label>
                     </div>
                 </div>
-            </div>
 
-            <button data-submit-btn type="submit" class="btn | ripples">
-                GENERATE
-                <svg class="btn-svg" width="12" height="12" xmlns="http://www.w3.org/2000/svg">
-                    <path fill="#24232C" d="m5.106 12 6-6-6-6-1.265 1.265 3.841 3.84H.001v1.79h7.681l-3.841 3.84z"/>
-                </svg>
-            </button>
+                <div data-error-message class="error">
+                    <p>Please select a checkbox above</p>
+                </div>
 
-            <button data-resetbtn type="reset" class="btn-reset | ripples">
-                Reset
-                <svg class="btn-reset-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M12 16c1.671 0 3-1.331 3-3s-1.329-3-3-3-3 1.331-3 3 1.329 3 3 3z"></path>
-                    <path
-                        d="M20.817 11.186a8.94 8.94 0 0 0-1.355-3.219 9.053 9.053 0 0 0-2.43-2.43 8.95 8.95 0 0 0-3.219-1.355 9.028 9.028 0 0 0-1.838-.18V2L8 5l3.975 3V6.002c.484-.002.968.044 1.435.14a6.961 6.961 0 0 1 2.502 1.053 7.005 7.005 0 0 1 1.892 1.892A6.967 6.967 0 0 1 19 13a7.032 7.032 0 0 1-.55 2.725 7.11 7.11 0 0 1-.644 1.188 7.2 7.2 0 0 1-.858 1.039 7.028 7.028 0 0 1-3.536 1.907 7.13 7.13 0 0 1-2.822 0 6.961 6.961 0 0 1-2.503-1.054 7.002 7.002 0 0 1-1.89-1.89A6.996 6.996 0 0 1 5 13H3a9.02 9.02 0 0 0 1.539 5.034 9.096 9.096 0 0 0 2.428 2.428A8.95 8.95 0 0 0 12 22a9.09 9.09 0 0 0 1.814-.183 9.014 9.014 0 0 0 3.218-1.355 8.886 8.886 0 0 0 1.331-1.099 9.228 9.228 0 0 0 1.1-1.332A8.952 8.952 0 0 0 21 13a9.09 9.09 0 0 0-.183-1.814z">
-                    </path>
-                </svg>
-            </button>
-        </form>
-    </div>
-</main>
+                <div class="strength">
+                    <p>STRENGTH</p>
+                    <div class="strength-wrapper">
+                        <p class="strength-message | opacity" data-strength-message></p>
+                        <div class="strength-pills">
+                            <div data-too-weak class="weak medium strong All"></div>
+                            <div data-weak class="weak medium strong All"></div>
+                            <div data-medium class="medium strong All"></div>
+                            <div data-strong class="strong All"></div>
+                        </div>
+                    </div>
+                </div>
+
+                <button data-submit-btn type="submit" class="btn | ripples">
+                    GENERATE
+                    <svg class="btn-svg" width="12" height="12" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#24232C"
+                            d="m5.106 12 6-6-6-6-1.265 1.265 3.841 3.84H.001v1.79h7.681l-3.841 3.84z" />
+                    </svg>
+                </button>
+
+                <button data-resetbtn type="reset" class="btn-reset | ripples">
+                    Reset
+                    <svg class="btn-reset-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24">
+                        <path d="M12 16c1.671 0 3-1.331 3-3s-1.329-3-3-3-3 1.331-3 3 1.329 3 3 3z"></path>
+                        <path
+                            d="M20.817 11.186a8.94 8.94 0 0 0-1.355-3.219 9.053 9.053 0 0 0-2.43-2.43 8.95 8.95 0 0 0-3.219-1.355 9.028 9.028 0 0 0-1.838-.18V2L8 5l3.975 3V6.002c.484-.002.968.044 1.435.14a6.961 6.961 0 0 1 2.502 1.053 7.005 7.005 0 0 1 1.892 1.892A6.967 6.967 0 0 1 19 13a7.032 7.032 0 0 1-.55 2.725 7.11 7.11 0 0 1-.644 1.188 7.2 7.2 0 0 1-.858 1.039 7.028 7.028 0 0 1-3.536 1.907 7.13 7.13 0 0 1-2.822 0 6.961 6.961 0 0 1-2.503-1.054 7.002 7.002 0 0 1-1.89-1.89A6.996 6.996 0 0 1 5 13H3a9.02 9.02 0 0 0 1.539 5.034 9.096 9.096 0 0 0 2.428 2.428A8.95 8.95 0 0 0 12 22a9.09 9.09 0 0 0 1.814-.183 9.014 9.014 0 0 0 3.218-1.355 8.886 8.886 0 0 0 1.331-1.099 9.228 9.228 0 0 0 1.1-1.332A8.952 8.952 0 0 0 21 13a9.09 9.09 0 0 0-.183-1.814z">
+                        </path>
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </main>
 
 </body>
+
 </html>
