--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     </div>
 
     <!-- Main Content Starts  -->
-    <h2 class="title">Password Generator</h2>
-    <main class="main">
+    <h2 class="title tracking-in-expand-fwd-top">Password Generator</h2>
+    <main class="main slide-in-blurred-bottom">
         <!-- Display Container  -->
         <div class="display-wrapper">
             <div class="display-box">
-                <p data-password-value>P4$5W0rD!JSgT</p>
+                <p data-password-value class="tracking-in-expand">P4$5W0rD!JSgT</p>
             </div>
-            <button data-copy class="copy-btn | ripples">
+            <button data-copy class="copy-btn | ripples slide-in-elliptic-top-fwd">
                 <!-- Copy Mark SVG  -->
                 <svg data-copy-mark class="opacity" width="21" height="24" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -68,22 +68,22 @@
                 <input class="RangeInput" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
 
                 <div class="input-wrapper">
-                    <div class="input-sub-wrapper input-link">
+                    <div class="input-sub-wrapper link">
                         <input type="checkbox" id="IncludeUppercase">
                         <label for="IncludeUppercase">Include Uppercase Letters</label>
                     </div>
 
-                    <div class="input-sub-wrapper input-link">
+                    <div class="input-sub-wrapper link">
                         <input type="checkbox" id="IncludeLowercase">
                         <label for="IncludeLowercase">Include Lowercase Letters</label>
                     </div>
 
-                    <div class="input-sub-wrapper input-link">
+                    <div class="input-sub-wrapper link">
                         <input type="checkbox" id="IncludeNumbers">
                         <label for="IncludeNumbers">Include Numbers</label>
                     </div>
 
-                    <div class="input-sub-wrapper input-link">
+                    <div class="input-sub-wrapper link">
                         <input type="checkbox" id="IncludeSymbols">
                         <label for="IncludeSymbols">Include Symbols</label>
                     </div>
@@ -94,7 +94,7 @@
                 </div>
 
                 <div class="strength">
-                    <p>STRENGTH</p>
+                    <p class="tracking-in-expand">STRENGTH</p>
                     <div class="strength-wrapper">
                         <p class="strength-message | opacity" data-strength-message></p>
                         <div class="strength-pills">
