--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Main Content Starts  -->
     <h2 class="title tracking-in-expand-fwd-top">Password Generator</h2>
-    <main class="main slide-in-blurred-bottom">
+    <main class="main slide-in-bottom">
         <!-- Display Container  -->
         <div class="display-wrapper">
             <div class="display-box">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
 
-                <button data-submit-btn type="submit" class="btn | ripples slide-in-blurred-bottom">
+                <button data-submit-btn type="submit" class="btn | ripples fade-in">
                     GENERATE
                     <svg class="btn-svg" width="12" height="12" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#24232C"
@@ -114,7 +114,7 @@
                     </svg>
                 </button>
 
-                <button data-resetbtn type="reset" class="btn-reset | ripples slide-in-blurred-bottom">
+                <button data-resetbtn type="reset" class="btn-reset | ripples fade-in">
                     Reset
                     <svg class="btn-reset-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24">
