--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="overflow-animate ">
 
     <!-- Background Animation  -->
-    <div class="area fade">
-        <ul class="circles">
+    <div class="area">
+        <ul class="circles fade">
             <li></li>
             <li></li>
             <li></li>
