--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                 <p data-range-number class="fade-in">0</p>
             </div>
             <form data-form action="">
-                <input class="RangeInput fade-in" type="range" min="1" max="25" value="0" steps="1" id="InputNumberRange">
+                <input class="RangeInput fade-in" type="range" min="1" max="25" value="0" steps="1"
+                    id="InputNumberRange">
 
                 <div class="input-wrapper">
                     <div class="input-sub-wrapper link">
@@ -106,7 +107,7 @@
                     </div>
                 </div>
 
-                <button data-submit-btn type="submit" class="btn | ripples fade-in">
+                <button data-submit-btn type="submit" class="btn | ripples">
                     GENERATE
                     <svg class="btn-svg" width="12" height="12" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#24232C"
@@ -114,7 +115,7 @@
                     </svg>
                 </button>
 
-                <button data-resetbtn type="reset" class="btn-reset | ripples fade-in">
+                <button data-resetbtn type="reset" class="btn-reset | ripples">
                     Reset
                     <svg class="btn-reset-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24">
